@@ -1,0 +1,51 @@
+# $Header: /var/cvsroot/gentoo-x86/app-portage/herdstat/files/herdstat.bashcomp,v 1.2 2005/03/09 16:41:34 ka0ttic Exp $
+# bash command line completion for herdstat.
+# Author: Aaron Walker <ka0ttic@gentoo.org>
+
+_herdstat() {
+    local cur prev opts
+    COMPREPLY=()
+    cur="${COMP_WORDS[COMP_CWORD]}"
+    prev="${COMP_WORDS[COMP_CWORD-1]}"
+    opts="-h --help -V --version -p --package -d --dev -H --herdsxml
+	-v --verbose -q --quiet -D --debug -t --timer -o --outfile
+        -f --fetch"
+
+    if [[ ${cur} == -* ]] ; then
+        COMPREPLY=( $(compgen -W "${opts}" -- ${cur}) )
+	    return 0
+    elif [[ ${COMP_CWORD} -eq 1 ]] ; then
+	    COMPREPLY=( $(compgen -W "$(herdstat -q all) ${opts}" -- ${cur}) )
+	    return 0
+    fi
+
+    case "${prev}" in
+	-H|--herdsxml|-o|--outfile)
+	    COMPREPLY=( $(compgen -f -- ${cur}) )
+	    ;;
+	-p|--package)
+	    COMPREPLY=( $(compgen -W "$(herdstat -q all) ${opts}" -- ${cur}) )
+	    ;;
+	-d|--dev)
+	    COMPREPLY=( $(compgen -W "$(herdstat -dq all) ${opts} all" -- ${cur}) )
+	    ;;
+	*)
+	    local x dev
+	    for x in ${COMP_WORDS[@]} ; do
+		if [[ ${x} == -*d* && ${x} != "--debug" ]] ; then
+		    dev=1
+		    break
+		fi
+	    done
+
+	    if [[ ${dev} -eq 1 ]] ; then
+		    COMPREPLY=( $(compgen -W "$(herdstat -dq all) ${opts} all" -- ${cur}) )
+	    else
+		    COMPREPLY=( $(compgen -W "$(herdstat -q all) ${opts} all" -- ${cur}) )
+	    fi
+	    ;;
+    esac
+}
+complete -o filenames -F _herdstat herdstat
+
+# vim: set ft=sh tw=80 sw=4 et :
